# selectquote-terraform-test

./: .pre-commit-config.yaml  README.md
.github/workflows/: rl-internal-deploy.yml  rl-internal-main.yml  rl-web-deploy.yml  rl-web-main.yml  terraform-apply.yml  terraform-plan.yml
rl-internal/: app.py  pyproject.toml
rl-web/: app.py  pyproject.toml
terraform/: .gitignore  ecr.tf  main.tf  outputs.tf  provider.tf  s3.tf  variables.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/internal-asg/: main.tf  provider.tf
terraform/modules/internal-ec2/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/modules/internal-ec2/userdata/: internal.tftpl
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/modules/web-ecs/: main.tf  outputs.tf  provider.tf  variables.tf
